--- a/appendix_datastructures.tex
+++ b/appendix_datastructures.tex
@@ -3,7 +3,7 @@
 
 \section{Übersicht über KMC-Operationen}
 
-\begin{table}[h!]
+\begin{table}[!ht]
   \oddrowcolors
   \caption[Liste der notwendigen Operationen]{
     Übersicht über Operationen, die auf die zugrunde liegenden Datenstrukturen ausgeführt werden.
@@ -144,7 +144,7 @@ Basis vieler Algorithmen auf Delaunay-Triangulationen basieren auf dem \textbf{F
 Dabei werden Grenzen zu dem benachbarten Simplex, dessen Punkt innerhalb des Umkreises liegt, aufgelöst und aus den dann verfügbaren Punkten zwei neue Simplexe gebildet.
 Im Anschluss ist es häufig notwendig, die neu entstandenen Simplexe sowie die ursprünglichen Nachbarn des zweiten Simplexes auf die gleiche Art zu prüfen.
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
   \captionsetup[subfigure]{singlelinecheck=false}{
     \def\subfigwidth{0.23\textwidth}
     \def\svgwidth{\textwidth}
