--- a/appendix_silicon.tex
+++ b/appendix_silicon.tex
@@ -3,14 +3,14 @@
 
 \section{Voruntersuchungen}
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
   \centering
   \includegraphics[width=10cm]{SiSi_npt_bondlengths}
   \caption{Bindungslängen von c-\ce{Si} für ReaxFF-Parametrisierungen}
   \label{fig:sisibondlengths}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
   \centering
   \includegraphics[width=10cm]{kulkarni_rdf_crystal}
   \caption[Radiale Verteilungsfunktionen von relaxiertem c-\ce{Si}]{
@@ -19,7 +19,7 @@
   \label{fig:kulkarnirdf}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
   \centering
   \includegraphics[width=\textwidth]{kulkarni_rdf_amorphous}
   \caption[Radiale Verteilungsfunktionen von relaxiertem a-\ce{Si}]{
@@ -28,7 +28,7 @@
   \label{fig:amorphousrdf}
 \end{figure}
 
-\begin{table}[h!]
+\begin{table}[!ht]
   \begin{threeparttable}
 
     \caption{Vergleich der Struktur amorphen Siliziums}
@@ -57,7 +57,7 @@
 \clearpage
 \section{Precursorsimulationen}
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.32\textwidth}
@@ -83,7 +83,7 @@
 
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.32\textwidth}
@@ -109,7 +109,7 @@
 
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 
   \captionsetup[subfigure]{singlelinecheck=false}
   \begin{subfigure}[t]{4cm}
