--- a/contents.tex
+++ b/contents.tex
@@ -93,13 +93,13 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
 \begin{comment}
   Liste der Abkürzungen, die nicht weiter erklärt werden:
   (Comment-Umgebung, damit sie vom Parser trotzdem erfasst werden)
-  
+
   ENAS      & \multicolumn{2}{l}{Fraunhofer-Institut für Elektronische Nano-Systeme}                            \\
   LAMMPS    & \multicolumn{2}{l}{Large-scale Atomic/Molecular Massively Parallel Simulator (MD-Bibliothek)}     \\
   AMBER
   GROMACS
+  BIOVIA
   TU
-  GIGANTISCHER
   EU
   ACCELERATE
 \end{comment}
