--- a/datastructures.tex
+++ b/datastructures.tex
@@ -29,7 +29,7 @@ Bei KMC-Simulationen überwiegen die drei Suchoperationen, da sie für jedes Ere
 Somit liegt das Auswahlkriterium der Datenstruktur bei der Effizienz ihrer Suchoperationen, mit Ausnahme der Nachbarschaftslisten und k-d-Bäume, deren Manipulationsoperationen für große Simulationsräume \todo{phrasing}zu langsam sind.
 Die Ergebnisse der Laufzeit-Analysen der sieben Operationen auf den vorgestellten Datenstrukturen werden in Tabelle~\ref{tab:dataruntimes} zusammen gefasst, wofür Tabelle~\ref{tab:datasymbols} die verwendeten Symbole erklärt.
 
-%% \begin{figure}[h]
+%% \begin{figure}[!ht]
 %%   \captionsetup[subfigure]{singlelinecheck=false}{
 %%     \def\subfigwidth{0.23\textwidth}
 %%     \def\svgwidth{\textwidth}
@@ -62,7 +62,7 @@ Die Ergebnisse der Laufzeit-Analysen der sieben Operationen auf den vorgestellte
 %% \end{figure}
 
 
-\begin{table}[h]
+\begin{table}[!ht]
   \centering
 
   \caption{Abschätzung der Komplexität für verschiedene Datenstrukturen und Operationen}
