--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -24,19 +24,18 @@
 
 \begin{document}
 
-%% \include{test}
-\include{titel}
-\include{abstract}
-\include{contents}
+%% \include{titel}
+%% \include{abstract}
+%% \include{contents}
 
 \include{intro}
-\include{theory}
-\include{models}
-\include{results}
-\include{summary}
+%% \include{theory}
+%% \include{models}
+%% \include{results}
+%% \include{summary}
+%% \include{appendix}
 
-\include{appendix}
-\include{bibliography}
-\include{unischeiss}
+%% \include{bibliography}
+%% \include{unischeiss}
 
 \end{document}
