--- a/present.tex
+++ b/present.tex
@@ -13,7 +13,7 @@ Im Folgenden soll ein Überblick über die bisherigen Untersuchungen gegeben wer
 Dazu werden die Plätze eines hexagonalen Gitters auf die Spezies Sauerstoff, Hydroxyl und Aluminium aufgeteilt, Zustandsübergänge in Abhängigkeit der 6 Nachbarzellen definiert und Übergangsraten ausgehend von den Energiebarrieren der entsprechenden chemischen Reaktionen ermittelt.
 Aussagen über die Schichthöhe ergeben sich über die Festlegung des vertikalen Gitterabstandes anhand der Einheitszelle eines \ce{Al2O3}-Kristalles mit anschließender vertikaler Oberflächensuche.
 
-Damit lassen sich zwar GPC-Werte und Precursorverbrauch in Annäherung bestimmen, doch ist durch die festlegung auf das zweidimensionale simulationsgitter keine strukturelle Aussage möglich, obwohl passend gewählte Ereignisse die \ce{Al2O3}-Stöchiometrie erzwingen.
+Damit lassen sich zwar GPC-Werte und Precursorverbrauch in Annäherung bestimmen, doch ist durch die festlegung auf das zweidimensionale Simulationsgitter keine strukturelle Aussage möglich, obwohl passend gewählte Ereignisse die \ce{Al2O3}-Stöchiometrie erzwingen.
 Eigene Untersuchungen des Dwivedi-Modelles resultierten in der Bildung von vertikalen, isolierten \ce{Al-O}-Ketten sowie in der Verstärkung von Kratern und konnten die präsentierten GPC-Werte nicht reproduzieren.
 
 \subsubsection{Mazaleyrat: gitterbasierte 3D-ALD}
