--- a/appendix.tex
+++ b/appendix.tex
@@ -1,7 +1,7 @@
 \begin{appendix}
 
   \input{appendix_datastructures}
-  %% \input{appendix_lammpsrant}
+  %% appendix_lammpsrant
   \input{appendix_multilayer}
   \input{appendix_silicon}
   \input{appendix_alumina}
