--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -11,7 +11,7 @@ Die Auftreffenergie wird jedoch hauptsächlich Teil vom Thermostat abgefangen, s
 
 Als Resultat bilden sich Poren (Abbildung~\ref{fig:multilayer_surfacefail}), die sich vergleichbar zu den Kupferkratern in Abbildung~\ref{fig:coppercrater} entwickeln, sich aber erst spät wieder schließen.
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
   \centering
   \includegraphics[height=10cm]{CuNi_surface8_noalpha}
   \caption{Oberflächenprofil einer CuNi-Oberfläche nach nur 4 Lagen (\SI{60}{\angstrom})}
@@ -23,7 +23,7 @@ Abbildung~\ref{fig:multilayer_columnfail} zeigt ein gleichartiges Resultat, das 
 Hier ist erkennbar, wie sich die gebildeten Poren wieder schließen.
 Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil abgebildet.
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
