--- a/intro.tex
+++ b/intro.tex
@@ -1,47 +1,59 @@
 \cleardoublepage
 \chapter{Einleitung}
 \label{intro}
-\todo[inline]{justiert -> optimiert}
+
 %% \todo[inline]{Aktueller Stand der Technologien und damit verbundene Herausforderungen}
 
-Seit vielen Jahrzehnten ist in der Mikro- und Nanoelektronik eine stetige Miniaturisierung zu beobachten, die in den letzten Jahren Strukturbreiten von wenigen Atome erreicht hat.
-Besonders bemerkbar macht sich dieser Umstand bei Transistoren, insbesondere bei MOSFETs, deren Strukturgrößen einzelne Nanometer erreicht hat, doch sorgt beim Gate-Dielektrikum die geringe Dielektrizität $\kappa = \num{3.9}$ des traditionellen Siliziumoxids zu Schichtdicken mehrerer Nanometer, die strukturell nicht mehr vertretbar sind.
-Um den Schritt zu flacheren Gate-Dielektrika zu gehen, werden seit einigen Jahren alternative Materialien verwendet, die aufgrund ihrer höheren Dielektrizität von $\kappa$ allgemein als High-$\kappa$-Dielektrika bezeichnet werden.
+In der Mikro- und Nanoelektronik herrscht eine anhaltende Miniaturisierung vor, die inzwischen bei Transistoren, insbesondere bei MOSFETs, zu Strukturbreiten im Nanometerbereich geführt hat.
+Um dabei eine hohe Kapazität des Gates bei verringerter Fläche beizubehalten, schrumpft die Schichtdicke des Gate-Dielektrikums ebenfalls auf Werte unterhalb von \SI{2}{\nano\meter}, bei denen jedoch Leckströme in Folge des Tunnel-Effektes auftreten.
+Deshalb hat man begonnen, das herkömmliche Siliziumoxid mit seiner Dielektrizität von $\kappa=\num{3.9}$ durch Dielektrika mit einem höheren Wert für $\kappa$ zu ersetzen, die man deshalb als High-$\kappa$-Dielektrika bezeichnet.
+Mit ihnen erreicht man die gleichen Kapazitäten bei größeren Schichtdicken und vermeidet so Leckströme.%%, \todo{Nebensatz überflüssig?}die exponentiell mit der Dicke des Isolators abnehmen.
 
 %% \vspace{1em}\todo[inline]{Kandidat zur Lösung von Herausforderungen}
 
-Die Produktion von dünnen Dielektrika wird per Gasphasenabscheidung realisiert, bei der sich Atome oder Moleküle aus der Gasphase auf einer Oberfläche absetzen und chemisch oder physikalisch langsam eine Schicht aufwachsen, deren Eigenschaften durch die Wahl und Dosierung der Gase kontrolliert werden kann.
-Ergänzend müssen die Prozessbedingungen justiert werden, um konforme Schichten abscheiden zu können.
-Experimentelle \todo{Iterationszyklen}Zyklen benötigen oftmals mehrere Monate der Justierung, bevor erste Aussagen über die Qualität und Wachstumsgeschwindigkeit der abgeschiedenen Schicht getroffen werden können.
+High-$\kappa$-Dielektrika müssen dabei nachträglich als dünne Schicht auf der Silizium-Oberfläche aufgebracht werden, wofür in der Produktion auf Gasphasenabscheidungen zurück gegriffen wird.
+Bei diesen adsorbieren einzelne Atome oder Moleküle aus der Gasphase an der Oberfläche und bilden so eine dünne Schicht, deren Dicke präzise im Sub-Nanometer-Bereich kontrolliert werden kann.
+Durch Wahl der benutzten Gase lassen sich so unterschiedliche Materialien abscheiden.
+
+%% \vspace{1em}\todo[inline]{weitere Anwendungen von Gasphasenabscheidung}
+Deshalb werden Gasphasenabscheidungen auch für eine Vielzahl anderer Anwendungen benutzt.
+Sie ermöglichen etwa die Produktion von passivierenden und protektiven Beschichtungen sowie von Diffusionsbarrieren, wie sie unter anderem in der \todo{schon wieder Mikroelektronik?}Mikroelektronik benutzt werden.
+Weiterhin erlauben sie die Produktion vielschichtiger Materialien mit besonderen strukturellen (erhöhte Festigkeit), magnetischen (Riesenmagnetowiderstand, magnetischer Tunnelwiderstand) und optischen (Röntgenspiegel) Eigenschaften.
+Doch auch größere Oberflächen werden per Gasphasenabscheidung mit funktionellen Dünnschichten versehen, etwa zur Witterungs- und Wärmebeständigkeit von Oberflächen.
+
+%% \vspace{1em}\todo[inline]{Probleme bei der Präparation von Gasphasenabscheidungen}
 
 %% \vspace{1em}\todo[inline]{Zu untersuchender Aspekt des Kandidaten}
-
-Atomistische Simulationen können durch systematische Erforschung der Prozessparameter helfen, diese Einstellzeit zu reduzieren, indem Aspekte des Prozesses numerisch untersucht werden.
-Dafür stehen Simulationen des Gasflusses, der Reaktionskinetik, der mittleren Zunahme der Schichtdicke sowie der Reaktionspfade zur Verfügung, doch existieren keine Simulationen der strukturellen Eigenschaften von dünnen Schichten, die per Gasphasenabscheidung produziert wurden.
-Dabei sind eben diese für heterogene und strukturierte Substrate, wie sie in der Nanoelektronik zwangsläufig genutzt werden, von Interesse.
+Atomistische Simulationen können helfen, unter verschiedenen Bedingungen die strukturellen Eigenschaften der abgeschiedenen Schicht zu untersuchen, anhand derer auch Rückschlüsse auf elektronische und thermodynamische Eigenschaften gezogen werden können.
+Dafür ist eine Modellierung chemischer Reaktionen und amorpher Strukturen ebenso notwendig wie die Beschreibung von Simulationsräumen \todo{in?}auf der Größe kompletter \todo{Nanodevices?}Nano-Bauelemente, um ebenfalls Aussagen über das Wachstum auf strukturierten und gemischten Substrate treffen zu können.
 
 %% \vspace{1em}\todo[inline]{Möglichkeiten zur Optimierung}
 
 Ansatzpunkte für die Simulation struktureller Eigenschaften bestehen in Kinetischen Monte Carlo-Methoden (KMC) einerseits und in Molekulardynamik (MD) andererseits.
-KMC kann die Reaktionskinetik komplizierter Prozesse zufriedenstellend beschreiben, scheitert jedoch an der strukturellen Darstellung.
-MD hingegen kann effizient atomistische Strukturen simulieren, lässt sich aber nur unzureichend zur Beschreibung von chemischen Reaktionen in großen Simulationsräumen nutzen.
-Eine Kombination beider Methoden stellt eine mögliche Lösung dar, wodurch die atomistische Simulation von Beschichtungen kompletter Nano-Bauelemente aussichtsreich erscheint.
-
-%% \vspace{1em}\todo[inline]{sich ergebende weitere Anwendungen des Optimierten}
-
-Ein solches Modell ließe sich auch für die Abscheidung von \todo{passiven?}passivierenden und protektiven Schichten und Diffusionsbarrieren nutzen, wie sie in verschiedenen Bereichen der \todo{wovon genau?}Industrie Anwendung finden.
-Auch die Simulation der Abscheidung von Multilagen-Systemen wie etwa GMR-Strukturen (Giant Magnetoresistance) stellt eine potentielle Anwendung des vorgestellten Modelles dar.
-Die Betrachtung unterschiedlicher Materialien wird unter anderem durch die Beschreibung verschiedener Arten von Gasphasenabscheidungen und Gasmolekülen ermöglicht.
-Vorhersagen über die Wachstumsraten und Qualität der dünnen Schichten in Abhängigkeit der Prozessparameter ermöglichen Optimierungen der Abscheidungsprozesse, wobei auch ungesättigte Zyklen bei Atomlagenabscheidungen und die Betrachtung von Nebenprodukten bei chemischen Abscheidungen möglich sind.
+KMC kann die Reaktionskinetik komplizierter Prozesse in großen Simulationsräumen zufriedenstellend beschreiben, ermöglicht allerdings keine detaillierte strukturelle Beschreibung der simulierten Materialien.
+MD hingegen simuliert effizient atomistische Strukturen, lässt sich aber nur unzureichend zur Beschreibung von großen Simulationsräumen nutzen.
+Mit der Einführung reaktiver Kraftfelder haben molekulardynamische Simulationen zudem die Möglichkeit gewonnen, chemische Reaktionen effizient zu simulieren, doch sind diese rechenaufwendiger als herkömmliche Kraftfelder und erlauben nur die Simulation weniger tausend Atome.
+Eine mögliche Lösung dieser Probleme stellt eine Kombination der beiden Methoden dar, durch die atomistische Simulationen vollständiger Beschichtungen kompletter Nano-Bauelemente ermöglicht werden.
 
 %% \vspace{1em}\todo[inline]{Anknüpfungspunkte und Fokus der Arbeit}
 
-Das Ziel der vorliegenden Arbeit ist, ein bestehendes Multiskalen-Modell für Atomlagenabscheidungen per KMC und MD auf allgemeine Gasphasenabscheidungen zu erweitern und anhand von physikalischen und chemischen Gasphasenabscheidungen zu überprüfen.
-Dabei soll die Präparation neuer Abscheidungsprozesse ebenso untersucht werden wie die Möglichkeit, molekulardynamische Formulierungen reaktiver Materialien auf chemische Gasphasenabscheidungen anzuwenden.
+Das Ziel der vorliegenden Arbeit ist, ein bestehendes Multiskalen-Modell zur Simulation von Atomlagenabscheidungen per KMC und MD auf allgemeine Gasphasenabscheidungen zu erweitern und die Simulation von Gasphasenabscheidungen, insbesondere physikalischer Gasphasenabscheidungen, damit zu realisieren.
+Dabei soll auch die Präparation neuer Abscheidungsprozesse untersucht werden sowie die Möglichkeit, die Reaktionen von chemischen Gasphasenabscheidungen durch reaktive Kraftfelder molekulardynamisch zu beschreiben.
+Die vorliegende Implementierung dieses Modelles soll dafür zugunsten der schnellen Prozesspräparation um Konfigurationsdateien, zentrale \todo{Übertreibung}Datenbanken der Substrate und Prozesskonfigurationen sowie um eine einfache Kontrolle der Prozessparallelisierung ergänzt werden\todo{nochmal scharf nachdenken, ob das wirklich am wichtigsten ist}.
 
 %% \vspace{1em}\todo[inline]{Struktur der Arbeit}
+\subsubsection{Struktur der Arbeit}
+\todo[inline]{nochmal lesen, wenn ich ausgeschlafen bin}
 
-Im Anschluss an diese Einleitung wird zuerst in Kapitel~\ref{theory} ein theoretischer Überblick über Abscheidungsprozesse und verwendete Simulationsmethoden gegeben.
-Kapitel~\ref{models} behandelt danach den aktuellen Stand atomistischer Simulationen von Gasphasenabscheidungen und stellt die Erweiterungen des kombinierten KMC/MD-Modells sowie verwendete molekulardynamische Methoden zur Präparation und Analyse von Ergebnissen vor.
+Im Anschluss an diese Einleitung wird zuerst in Kapitel~\ref{theory} ein theoretischer Überblick über die Arten und Funktionsweisen von Gasphasenabscheidungen, Molekulardynamik und Kinetische Monte Carlo-Methoden gegeben.
+
+Danach stellt Kapitel~\ref{models} den aktuellen Stand der Simulationen von Gasphasenabscheidungen mit KMC und MD vor, präsentiert die Erweiterungen des kombinierten KMC/MD-Modells und gibt einen Überblick über allgemeine molekulardynamische Methoden zur Präparation von Prozessen und Substraten sowie zur Analyse von Ergebnissen.
+
 Der Hauptteil der Arbeit beschäftigt sich in Kapitel~\ref{results} mit den Ergebnissen der Simulation von Gasphasenabscheidungen und den notwendigen Voruntersuchungen der molekulardynamischen Potentialparametrisierungen.
-Zum Abschluss wird die Arbeit mit Kapitel~\ref{summary} und interessante Fragestellungen für künftige Untersuchungen gegeben.
+Dafür wurde Gold-PVD als Beispielprozess für nichtreaktive Abscheidungen präpariert und damit das Wachstumsverhalten auf strukturierten Substraten sowie die Skalierbarkeit des kombinierten Modelles überprüft.
+Anhand von Kupfer-PVD wurden Unterschiede zwischen verschiedenen Parametersätzen des selben Kraftfeldes untersucht und die Bildung und Schließung von Oberflächendefekten beobachtet.
+Die Simulation gemischter Systeme wurden anhand von der Multilagen-Abscheidung per Kupfer-Nickel-PVD mit reiner Molekulardynamik untersucht und die entstandenen Strukturen mit den Ergebnissen einer reinen MD-Simulation verglichen.
+Anschließend wird die Präparation und Abscheidung amorpher Strukturen am Silizium-PVD-System untersucht, wobei auch Betrachtungen der Gasphasen-Reaktionenen für Siliziumoxid-CVD vorgenommen werden.
+Zuletzt betrachtet dieses Kapitel die Oberflächen-Reaktionen des \ce{Al2O3}-ALD-Prozesses mit den Prozessgasen Trimethylaluminium und Wasser.
+
+Zum Abschluss wird die Arbeit mit Kapitel~\ref{summary} zusammen gefasst und interessante Fragestellungen für künftige Untersuchungen gegeben.
