--- a/results.tex
+++ b/results.tex
@@ -2,6 +2,8 @@
 \chapter{Ergebnisse}
 \label{results}
 
+\todo[inline]{viel öfter das Wort ``epitaktisch'' und ``Epitaxie'' fallen lassen?}
+
 Unter Nutzung der in Kapitel~\ref{theory} und Kapitel~\ref{models} vorgestellten Methoden werden im folgenden Kapitel Abscheidungssimulationen mit dem Ziel durchgeführt, die Präparation, Durchführung, Möglichkeiten und Einschränkungen des Parsivald-Modelles für PVD und CVD zu prüfen.
 
 Dazu werden in eigenständigen Abschnitten verschiedene Systeme auf unterschiedliche Aspekte untersucht:
