showmishaps.sh updated

--- a/contents.tex
+++ b/contents.tex
@@ -102,6 +102,7 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
   TU
   EU
   ACCELERATE
+  MOSFETs
 \end{comment}
 
 \todo[inline]{NB vorstellen?}
