--- a/intro.tex
+++ b/intro.tex
@@ -4,7 +4,7 @@
 
 %% \todo[inline]{Aktueller Stand der Technologien und damit verbundene Herausforderungen}
 
-In der Mikro- und Nanoelektronik herrscht eine anhaltende Miniaturisierung vor, die inzwischen bei Transistoren, insbesondere bei MOSFETs, zu Strukturbreiten im Nanometerbereich geführt hat.
+In der Mikro- und Nanoelektronik herrscht eine anhaltende Miniaturisierung vor, die inzwischen für Transistoren, insbesondere MOSFETs, zu Strukturbreiten im Nanometerbereich geführt hat.
 Um dabei eine hohe Kapazität des Gates bei verringerter Fläche beizubehalten, schrumpft die Schichtdicke des Gate-Dielektrikums ebenfalls auf Werte unterhalb von \SI{2}{\nano\meter}, bei denen jedoch Leckströme in Folge des Tunnel-Effektes auftreten.
 Deshalb hat man begonnen, das herkömmliche Siliziumoxid mit seiner Dielektrizität von $\kappa=\num{3.9}$ durch Dielektrika mit einem höheren Wert für $\kappa$ zu ersetzen, die man deshalb als High-$\kappa$-Dielektrika bezeichnet.
 Mit ihnen erreicht man die gleichen Kapazitäten bei größeren Schichtdicken und vermeidet so Leckströme.%%, \todo{Nebensatz überflüssig?}die exponentiell mit der Dicke des Isolators abnehmen.
