--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -24,18 +24,24 @@
 
 \begin{document}
 
-%% \include{titel}
-%% \include{abstract}
+\include{titel}
+\include{abstract}
 \include{contents}
 
+\cleardoublepage
 \include{intro}
-%% \include{theory}
-%% \include{models}
-%% \include{results}
-%% \include{summary}
-%% \include{appendix}
+\cleardoublepage
+\include{theory}
+\cleardoublepage
+\include{models}
+\cleardoublepage
+\include{results}
+\cleardoublepage
+\include{summary}
+\cleardoublepage
+\include{appendix}
 
-%% \include{bibliography}
-%% \include{unischeiss}
+\include{bibliography}
+\include{unischeiss}
 
 \end{document}
