--- a/intro.tex
+++ b/intro.tex
@@ -1,59 +1,55 @@
-\cleardoublepage
 \chapter{Einleitung}
 \label{intro}
 
-%% \todo[inline]{Aktueller Stand der Technologien und damit verbundene Herausforderungen}
+%% {Aktueller Stand der Technologien und damit verbundene Herausforderungen}
 
 In der Mikro- und Nanoelektronik herrscht eine anhaltende Miniaturisierung vor, die inzwischen für Transistoren, insbesondere MOSFETs, zu Strukturbreiten im Nanometerbereich geführt hat.
 Um dabei eine hohe Kapazität des Gates bei verringerter Fläche beizubehalten, schrumpft die Schichtdicke des Gate-Dielektrikums ebenfalls auf Werte unterhalb von \SI{2}{\nano\meter}, bei denen jedoch Leckströme in Folge des Tunnel-Effektes auftreten.
-Deshalb hat man begonnen, das herkömmliche Siliziumoxid mit seiner Dielektrizität von $\kappa=\num{3.9}$ durch Dielektrika mit einem höheren Wert für $\kappa$ zu ersetzen, die man deshalb als High-$\kappa$-Dielektrika bezeichnet.
-Mit ihnen erreicht man die gleichen Kapazitäten bei größeren Schichtdicken und vermeidet so Leckströme.%%, \todo{Nebensatz überflüssig?}die exponentiell mit der Dicke des Isolators abnehmen.
+Deshalb wurde begonnen, das herkömmliche Siliziumdioxid mit seiner Dielektrizität von $\kappa=\num{3.9}$ durch Dielektrika mit einem höheren Wert für $\kappa$ zu ersetzen, die man deshalb als High-$\kappa$-Dielektrika bezeichnet.
+Mit ihnen werden die gleichen Kapazitäten bei größeren Schichtdicken erreicht, wodurch Leckströme vermieden werden.
 
-%% \vspace{1em}\todo[inline]{Kandidat zur Lösung von Herausforderungen}
+%% {Kandidat zur Lösung von Herausforderungen}
 
 High-$\kappa$-Dielektrika müssen dabei nachträglich als dünne Schicht auf der Silizium-Oberfläche aufgebracht werden, wofür in der Produktion auf Gasphasenabscheidungen zurück gegriffen wird.
 Bei diesen adsorbieren einzelne Atome oder Moleküle aus der Gasphase an der Oberfläche und bilden so eine dünne Schicht, deren Dicke präzise im Sub-Nanometer-Bereich kontrolliert werden kann.
-Durch Wahl der benutzten Gase lassen sich so unterschiedliche Materialien abscheiden.
+Mit Physikalischer Gasphasenabscheidung (PVD, Physical Vapor Deposition), Chemischer Gasphasenabscheidung (CVD, Chemical Vapor Deposition) und Atomlagenabscheidung (ALD, Atomic Layer Deposition) stehen Methoden zur Verfügung, die das Wachstum verschiedener Materialien mit unterschiedlichen Graden der Prozesskontrolle erlauben.
 
-%% \vspace{1em}\todo[inline]{weitere Anwendungen von Gasphasenabscheidung}
-Deshalb werden Gasphasenabscheidungen auch für eine Vielzahl anderer Anwendungen benutzt.
-Sie ermöglichen etwa die Produktion von passivierenden und protektiven Beschichtungen sowie von Diffusionsbarrieren, wie sie unter anderem in der \todo{schon wieder Mikroelektronik?}Mikroelektronik benutzt werden.
-Weiterhin erlauben sie die Produktion vielschichtiger Materialien mit besonderen strukturellen (erhöhte Festigkeit), magnetischen (Riesenmagnetowiderstand, magnetischer Tunnelwiderstand) und optischen (Röntgenspiegel) Eigenschaften.
-Doch auch größere Oberflächen werden per Gasphasenabscheidung mit funktionellen Dünnschichten versehen, etwa zur Witterungs- und Wärmebeständigkeit von Oberflächen.
+%% {weitere Anwendungen von Gasphasenabscheidung}
+Deshalb werden Gasphasenabscheidungen auch für eine Vielzahl anderer Anwendungen verwendet.
+Sie ermöglichen etwa die Produktion von passivierenden und protektiven Beschichtungen sowie von Diffusionsbarrieren, wie sie unter anderem in der Mikroelektronik benutzt werden.
+Weiterhin erlauben sie die Herstellung vielschichtiger Materialien mit besonderen strukturellen (erhöhte Festigkeit), magnetischen (Riesenmagnetowiderstand, magnetischer Tunnelwiderstand) und optischen (Röntgenspiegel) Eigenschaften.
+Doch auch größere Oberflächen werden per Gasphasenabscheidung mit funktionellen Dünnschichten versehen, etwa zur Erhöhung der Witterungs- und Wärmebeständigkeit von Oberflächen.
 
-%% \vspace{1em}\todo[inline]{Probleme bei der Präparation von Gasphasenabscheidungen}
-
-%% \vspace{1em}\todo[inline]{Zu untersuchender Aspekt des Kandidaten}
+%% {Zu untersuchender Aspekt des Kandidaten}
 Atomistische Simulationen können helfen, unter verschiedenen Bedingungen die strukturellen Eigenschaften der abgeschiedenen Schicht zu untersuchen, anhand derer auch Rückschlüsse auf elektronische und thermodynamische Eigenschaften gezogen werden können.
-Dafür ist eine Modellierung chemischer Reaktionen und amorpher Strukturen ebenso notwendig wie die Beschreibung von Simulationsräumen \todo{in?}auf der Größe kompletter \todo{Nanodevices?}Nano-Bauelemente, um ebenfalls Aussagen über das Wachstum auf strukturierten und gemischten Substrate treffen zu können.
+Dafür ist eine Modellierung chemischer Reaktionen und amorpher Strukturen ebenso notwendig wie die Beschreibung von Simulationsräumen auf der Größenordnung kompletter Nano-Bauelemente, um ebenfalls Aussagen über das Wachstum auf strukturierten und gemischten Substraten treffen zu können.
 
-%% \vspace{1em}\todo[inline]{Möglichkeiten zur Optimierung}
+%% {Möglichkeiten zur Optimierung}
 
 Ansatzpunkte für die Simulation struktureller Eigenschaften bestehen in Kinetischen Monte Carlo-Methoden (KMC) einerseits und in Molekulardynamik (MD) andererseits.
 KMC kann die Reaktionskinetik komplizierter Prozesse in großen Simulationsräumen zufriedenstellend beschreiben, ermöglicht allerdings keine detaillierte strukturelle Beschreibung der simulierten Materialien.
 MD hingegen simuliert effizient atomistische Strukturen, lässt sich aber nur unzureichend zur Beschreibung von großen Simulationsräumen nutzen.
 Mit der Einführung reaktiver Kraftfelder haben molekulardynamische Simulationen zudem die Möglichkeit gewonnen, chemische Reaktionen effizient zu simulieren, doch sind diese rechenaufwendiger als herkömmliche Kraftfelder und erlauben nur die Simulation weniger tausend Atome.
-Eine mögliche Lösung dieser Probleme stellt eine Kombination der beiden Methoden dar, durch die atomistische Simulationen vollständiger Beschichtungen kompletter Nano-Bauelemente ermöglicht werden.
+Eine mögliche Lösung dieser Probleme stellt eine Kombination der beiden Methoden dar, durch die atomistische Simulationen von vollständigen Beschichtungen kompletter Nano-Bauelemente ermöglicht werden.
 
-%% \vspace{1em}\todo[inline]{Anknüpfungspunkte und Fokus der Arbeit}
+%% {Anknüpfungspunkte und Fokus der Arbeit}
 
-Das Ziel der vorliegenden Arbeit ist, ein bestehendes Multiskalen-Modell zur Simulation von Atomlagenabscheidungen per KMC und MD auf allgemeine Gasphasenabscheidungen zu erweitern und die Simulation von Gasphasenabscheidungen, insbesondere physikalischer Gasphasenabscheidungen, damit zu realisieren.
-Dabei soll auch die Präparation neuer Abscheidungsprozesse untersucht werden sowie die Möglichkeit, die Reaktionen von chemischen Gasphasenabscheidungen durch reaktive Kraftfelder molekulardynamisch zu beschreiben.
-Die vorliegende Implementierung dieses Modelles soll dafür zugunsten der schnellen Prozesspräparation um Konfigurationsdateien, zentrale \todo{Übertreibung}Datenbanken der Substrate und Prozesskonfigurationen sowie um eine einfache Kontrolle der Prozessparallelisierung ergänzt werden\todo{nochmal scharf nachdenken, ob das wirklich am wichtigsten ist}.
+Das Ziel der vorliegenden Arbeit ist, ein bestehendes Multiskalen-Modell zur Simulation von Atomlagenabscheidungen per KMC und MD auf allgemeine Gasphasenabscheidungen zu erweitern und die Simulation von Gasphasenabscheidungen, insbesondere der physikalischen Gasphasenabscheidung, damit zu realisieren.
+Dabei soll auch die Präparation neuer Abscheidungsprozesse sowie die Möglichkeit, die Oberflächen-Reaktionen bei chemischen Gasphasenabscheidungen durch reaktive Kraftfelder molekulardynamisch zu beschreiben, untersucht werden.
+Die vorliegende Implementierung dieses Modelles soll dafür außerdem zugunsten der schnellen Prozesspräparation um Konfigurationsdateien, zentrale Datenbanken der Substrate und Prozesskonfigurationen sowie um eine einfache Kontrolle der Prozessparallelisierung ergänzt werden.
 
-%% \vspace{1em}\todo[inline]{Struktur der Arbeit}
+%% {Struktur der Arbeit}
 \subsubsection{Struktur der Arbeit}
-\todo[inline]{nochmal lesen, wenn ich ausgeschlafen bin}
 
-Im Anschluss an diese Einleitung wird zuerst in Kapitel~\ref{theory} ein theoretischer Überblick über die Arten und Funktionsweisen von Gasphasenabscheidungen, Molekulardynamik und Kinetische Monte Carlo-Methoden gegeben.
+Im Anschluss an diese Einleitung wird zuerst in Kapitel~\ref{theory} ein theoretischer Überblick über die Arten und Funktionsweisen von Gasphasenabscheidungen, sowie die Simulationsmethoden der Molekulardynamik und Kinetischen Monte Carlo-Methoden gegeben.
 
 Danach stellt Kapitel~\ref{models} den aktuellen Stand der Simulationen von Gasphasenabscheidungen mit KMC und MD vor, präsentiert die Erweiterungen des kombinierten KMC/MD-Modells und gibt einen Überblick über allgemeine molekulardynamische Methoden zur Präparation von Prozessen und Substraten sowie zur Analyse von Ergebnissen.
 
-Der Hauptteil der Arbeit beschäftigt sich in Kapitel~\ref{results} mit den Ergebnissen der Simulation von Gasphasenabscheidungen und den notwendigen Voruntersuchungen der molekulardynamischen Potentialparametrisierungen.
-Dafür wurde Gold-PVD als Beispielprozess für nichtreaktive Abscheidungen präpariert und damit das Wachstumsverhalten auf strukturierten Substraten sowie die Skalierbarkeit des kombinierten Modelles überprüft.
-Anhand von Kupfer-PVD wurden Unterschiede zwischen verschiedenen Parametersätzen des selben Kraftfeldes untersucht und die Bildung und Schließung von Oberflächendefekten beobachtet.
-Die Simulation gemischter Systeme wurden anhand von der Multilagen-Abscheidung per Kupfer-Nickel-PVD mit reiner Molekulardynamik untersucht und die entstandenen Strukturen mit den Ergebnissen einer reinen MD-Simulation verglichen.
-Anschließend wird die Präparation und Abscheidung amorpher Strukturen am Silizium-PVD-System untersucht, wobei auch Betrachtungen der Gasphasen-Reaktionenen für Siliziumoxid-CVD vorgenommen werden.
-Zuletzt betrachtet dieses Kapitel die Oberflächen-Reaktionen des \ce{Al2O3}-ALD-Prozesses mit den Prozessgasen Trimethylaluminium und Wasser.
+Der Hauptteil der Arbeit beschäftigt sich dann in Kapitel~\ref{results} mit den Ergebnissen der Simulation von Gasphasenabscheidungen und den notwendigen Voruntersuchungen der molekulardynamischen Potentialparametrisierungen.
+Dafür wird zuerst eine Gold-PVD-Simulation als Beispielprozess für nichtreaktive Abscheidungen präpariert und damit das Wachstumsverhalten auf strukturierten Substraten sowie die Skalierbarkeit des kombinierten Modelles überprüft.
+Anhand von Kupfer-PVD werden danach Unterschiede zwischen verschiedenen Parametersätzen des selben Kraftfeldes untersucht und die Bildung und Schließung von Oberflächendefekten beobachtet.
+Die Simulation gemischter Systeme wird anhand der Multilagen-Abscheidung durch Kupfer-Nickel-PVD untersucht und die entstandenen Strukturen mit den Ergebnissen einer reinen MD-Simulation verglichen.
+Anschließend wird die Präparation und Abscheidung amorpher Strukturen am Silizium-PVD-System untersucht, wobei auch Betrachtungen der Gasphasen-Reaktionen für Siliziumoxid-CVD durchgeführt werden.
+Zuletzt werden die Oberflächen-Reaktionen des Aluminiumoxid-ALD-Prozesses mit den Prozessgasen Trimethylaluminium und Wasser simuliert.
 
-Zum Abschluss wird die Arbeit mit Kapitel~\ref{summary} zusammen gefasst und interessante Fragestellungen für künftige Untersuchungen gegeben.
+Zum Abschluss wird die Arbeit mit Kapitel~\ref{summary} zusammen gefasst und interessante Fragestellungen und Anknüpfungspunkte für künftige Untersuchungen gegeben.
