--- a/models.tex
+++ b/models.tex
@@ -1,13 +1,12 @@
-\cleardoublepage
 \chapter{Methoden und Modelle}
 \label{models}
 %% \chapter{ReaxFF-Potentiale für SiO$_2$-Abscheidungen}
 
 \todo[inline]{Kurze Einleitung}
 
-\input{present}
-\clearpage
+%% \input{present}
+%% \clearpage
 \input{parsivald}
-\clearpage
-\input{mdmethods}
+%% \clearpage
+%% \input{mdmethods}
 
